--- a/index.html
+++ b/index.html
@@ -1,1 +1,25 @@
+
+
 <!-- Write HTML code  -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="./public/style.css">
+</head>
+<body id="Body" class="container">
+    <div id="bdy">
+    <div class="container" >
+        <h1>Fresh fruits for the day</h1>
+    </div>
+
+    <div id="div" class="container maindiv">
+
+    </div>
+    </div>
+    <script src="./src/app.js"></script>
+</body>
+</html>
